force-app/main/default/objects/Repo_Branch__c/Repo_Branch__c.object-meta.xml
<CustomObject>
    <label>Repo Branch</label>
    <nameField>
        <label>Branch Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repo Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>