force-app/main/default/objects/Repo_Branch__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>