force-app/main/default/objects/Repo_Branch__c/fields/Master_Branch__c.field-meta.xml
<CustomField>
    <fullName>Master_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Branch</label>
    <type>Checkbox</type>
</CustomField>