force-app/main/default/objects/Repo_Branch__c/fields/Repo_URL__c.field-meta.xml
<CustomField>
    <fullName>Repo_URL__c</fullName>
    <formula>Repository__r.Repo_URL__c  &amp; IF( Master_Branch__c , &quot;&quot;,  &quot;/tree/&quot; &amp; Branch_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repo URL</label>
    <type>Text</type>
</CustomField>