force-app/main/default/objects/Repo_Branch__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <referenceTo>Repository__c</referenceTo>
    <relationshipName>Branches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>